# debounce

./: AGENTS.md  README.md  meson.build
.github/workflows/: ci.yml
config/: debounce_version.h.in
include/: debounce.h  debounce_conf.h
src/: .gitkeep
tests/: meson.build  test_debounce.c  test_debounce_callbacks.c  test_installed_consumer.c
